--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.0.5+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 21 Aug 2022 08:24:28 +0200
+
 nuitka (1.0.4+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
