--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.0.6+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 23 Aug 2022 20:07:27 +0200
+
 nuitka (1.0.5+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
