--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.0.7+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 11 Sep 2022 10:34:06 +0200
+
 nuitka (1.0.6+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
