--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.0.8+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 19 Sep 2022 08:18:45 +0200
+
 nuitka (1.0.7+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
