--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.1.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 02 Oct 2022 11:10:07 +0200
+
 nuitka (1.1+ds-1) unstable; urgency=medium
 
   * New upstream release.
