--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.1.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 08 Oct 2022 17:40:59 +0200
+
 nuitka (1.1.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
