--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.1.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 13 Oct 2022 11:05:36 +0200
+
 nuitka (1.1.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
