--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+nuitka (1.1.5+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 14 Oct 2022 08:19:39 +0200
+
+nuitka (1.1.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 14 Oct 2022 08:19:33 +0200
+
 nuitka (1.1.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
