--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nuitka (1.1.7+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+  * Handle Debian sid change in release number (Closes: #1022400)
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 26 Oct 2022 14:46:14 +0200
+
 nuitka (1.1.6+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
