--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.1.8+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 04 Nov 2022 10:26:41 +0100
+
 nuitka (1.1.7+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
