--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.3~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 11 Nov 2022 09:13:47 +0100
+
 nuitka (1.2+ds-1) unstable; urgency=medium
 
   * New upstream release.
