--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.2.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 19 Nov 2022 17:05:08 +0100
+
 nuitka (1.2.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
