--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.2.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 26 Nov 2022 11:07:57 +0100
+
 nuitka (1.2.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
