--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.2.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 03 Dec 2022 13:45:31 +0100
+
 nuitka (1.2.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
