--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+nuitka (1.2.6+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Thu, 08 Dec 2022 07:18:44 +0100
+
+nuitka (1.2.5+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 07 Dec 2022 15:57:44 +0100
+
 nuitka (1.2.4+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
