--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.2.7+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 13 Dec 2022 11:16:23 +0100
+
 nuitka (1.2.6+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
