--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (1.3~rc9+ds-1) unstable; urgency=medium
+nuitka (1.3+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Mon, 19 Dec 2022 08:20:18 +0100
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 21 Dec 2022 13:14:49 +0100
 
 nuitka (1.2.7+ds-1) unstable; urgency=medium
 
