--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.4~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 21 Dec 2022 13:37:18 +0100
+
 nuitka (1.3+ds-1) unstable; urgency=medium
 
   * New upstream release.
