--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.3.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 21 Dec 2022 19:14:46 +0100
+
 nuitka (1.3+ds-1) unstable; urgency=medium
 
   * New upstream release.
