--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.3.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Fri, 23 Dec 2022 08:19:05 +0100
+
 nuitka (1.3.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
