--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.3.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 26 Dec 2022 10:39:49 +0100
+
 nuitka (1.3.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
