--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.3.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Wed, 28 Dec 2022 21:20:25 +0100
+
 nuitka (1.3.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
