--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.3.5+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 01 Jan 2023 09:39:39 +0100
+
 nuitka (1.3.4+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
