--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.3.8+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 16 Jan 2023 11:05:41 +0100
+
 nuitka (1.3.7+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
