--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.4.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 29 Jan 2023 23:21:23 +0100
+
 nuitka (1.4+ds-1) unstable; urgency=medium
 
   * New upstream release.
