--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.4.2+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 31 Jan 2023 07:17:15 +0100
+
 nuitka (1.4.1+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
