--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.4.3+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 04 Feb 2023 07:24:47 +0100
+
 nuitka (1.4.2+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
