--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.4.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 07 Feb 2023 19:03:45 +0100
+
 nuitka (1.4.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
