--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.4.6+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 12 Feb 2023 19:11:46 +0100
+
 nuitka (1.4.5+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
