--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.4.7+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 13 Feb 2023 14:38:57 +0100
+
 nuitka (1.4.6+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
