--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.4.8+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 21 Feb 2023 09:18:59 +0100
+
 nuitka (1.4.7+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
