--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nuitka (1.5~rc14+ds-1) unstable; urgency=medium
+nuitka (1.5+ds-1) unstable; urgency=medium
 
-  * New upstream pre-release.
+  * New upstream release.
 
- -- Kay Hayen <kay.hayen@gmail.com>  Sat, 11 Mar 2023 09:42:59 +0100
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 11 Mar 2023 15:55:37 +0100
 
 nuitka (1.4.8+ds-1) unstable; urgency=medium
 
