--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.6~rc1+ds-1) unstable; urgency=medium
+
+  * New upstream pre-release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sat, 11 Mar 2023 15:56:40 +0100
+
 nuitka (1.5+ds-1) unstable; urgency=medium
 
   * New upstream release.
