--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.5.1+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Mon, 13 Mar 2023 15:52:36 +0100
+
 nuitka (1.5+ds-1) unstable; urgency=medium
 
   * New upstream release.
