--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.5.4+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Sun, 26 Mar 2023 10:24:29 +0200
+
 nuitka (1.5.3+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
