--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nuitka (1.5.6+ds-1) unstable; urgency=medium
+
+  * New upstream hotfix release.
+
+ -- Kay Hayen <kay.hayen@gmail.com>  Tue, 11 Apr 2023 10:09:53 +0200
+
 nuitka (1.5.5+ds-1) unstable; urgency=medium
 
   * New upstream hotfix release.
